--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -31,6 +31,7 @@
   --transition-duration: 0.2s;
 
   --padding-left: 20px;
+  --padding-right: 20px;
   --padding-left-mobile: 8px;
   --padding-top: 20px;
   --margin-out-btn: 8px 8px;
