--- a/style.css
+++ b/style.css
@@ -136,11 +136,10 @@
 
 @media (max-width: 767px) {
   .swiper-block-mobile {
-    background-color: var(--color-background-main) !important;
     overflow: hidden !important;
     height: 100%; }
     .swiper-block-mobile .swiper-container {
-      width: 81.25% !important; }
+      width: 81.25vw !important; }
       .swiper-block-mobile .swiper-container .swiper-wrapper .swiper-slide {
         margin-right: 8px; }
     .swiper-block-mobile .swiper-pagination {
@@ -252,6 +251,7 @@
   --border-out: none;
   --transition-duration: 0.2s;
   --padding-left: 20px;
+  --padding-right: 20px;
   --padding-left-mobile: 8px;
   --padding-top: 20px;
   --margin-out-btn: 8px 8px;
@@ -415,7 +415,8 @@ button {
   background-image: url(./static/profile.svg); }
 
 main {
-  width: 100%; }
+  width: 100%;
+  background-color: var(--color-background-main); }
   main .interactiv-group {
     display: flex;
     justify-content: space-between;
@@ -425,7 +426,8 @@ main {
     padding-bottom: 20px;
     padding-left: var(--padding-left);
     padding-top: var(--padding-top);
-    border-bottom: 1px solid var(--color-turquoise); }
+    border-bottom: 1px solid var(--color-turquoise);
+    background-color: var(--color-background-btn) !important; }
     main .interactiv-group__divider-left {
       border: 1px solid var(--color-grey-alt);
       border-radius: 2px;
@@ -589,10 +591,10 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--color-background-main);
   border: var(--border-out);
   font-size: var(--font-size-main);
-  font-family: var(--font-family-base); }
+  font-family: var(--font-family-base);
+  background-color: var(--color-background-main); }
   .button-reed-more--reverse {
     height: 24px;
     width: 88px; }
@@ -661,11 +663,11 @@ main {
       margin: 10px 0; }
     .price-list .other-info .button-offer {
       display: inline-block;
-      background-color: var(--color-background-main);
       border: var(--border-out);
       font-size: var(--font-size-main);
       font-family: var(--font-family-base);
-      text-align: left; }
+      text-align: left;
+      background-color: var(--color-background-main); }
       .price-list .other-info .button-offer span {
         padding: 0 10px 0 0; }
       .price-list .other-info .button-offer img {
@@ -791,7 +793,8 @@ main {
   height: 100%;
   padding-top: var(--padding-top);
   padding-left: var(--padding-left);
-  box-shadow: 0 0 50px 5px rgba(37, 37, 37, 0.815); }
+  padding-right: var(--padding-right);
+  border-left: var(--color-turquoise); }
   .feedback__wrapper form .button,
   .callback__wrapper form .button {
     position: absolute;
@@ -817,14 +820,14 @@ main {
   .feedback__wrapper form input,
   .callback__wrapper form input {
     height: 50px;
-    width: 376px;
+    width: 100%;
     border: 1px solid var(--color-grey-alt);
     border-radius: 8px;
     margin-bottom: 16px; }
     .feedback__wrapper form input[name='message'],
     .callback__wrapper form input[name='message'] {
       height: 120px;
-      width: 376px; }
+      width: 100%; }
       .feedback__wrapper form input[name='message']::-webkit-input-placeholder,
       .callback__wrapper form input[name='message']::-webkit-input-placeholder {
         vertical-align: text-top; }
