--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -685,9 +685,16 @@ main {
         font-family: var(--font-family-base);
         font-size: var(--font-size-main);
         color: var(--color-grey);
-        padding-left: 5px;
+        padding: 5px;
         height: 120px;
         width: 100%;
+
+        &::placeholder {
+          font-family: var(--font-family-base);
+          font-size: var(--font-size-main);
+          color: var(--color-grey);
+          padding-left: 5px;
+        }
       }
     }
     .content {
