--- a/style.css
+++ b/style.css
@@ -855,9 +855,33 @@ main {
     font-family: var(--font-family-base);
     font-size: var(--font-size-main);
     color: var(--color-grey);
-    padding-left: 5px;
+    padding: 5px;
     height: 120px;
     width: 100%; }
+    .feedback__wrapper form textarea::-webkit-input-placeholder,
+    .callback__wrapper form textarea::-webkit-input-placeholder {
+      font-family: var(--font-family-base);
+      font-size: var(--font-size-main);
+      color: var(--color-grey);
+      padding-left: 5px; }
+    .feedback__wrapper form textarea::-moz-placeholder,
+    .callback__wrapper form textarea::-moz-placeholder {
+      font-family: var(--font-family-base);
+      font-size: var(--font-size-main);
+      color: var(--color-grey);
+      padding-left: 5px; }
+    .feedback__wrapper form textarea:-ms-input-placeholder,
+    .callback__wrapper form textarea:-ms-input-placeholder {
+      font-family: var(--font-family-base);
+      font-size: var(--font-size-main);
+      color: var(--color-grey);
+      padding-left: 5px; }
+    .feedback__wrapper form textarea::placeholder,
+    .callback__wrapper form textarea::placeholder {
+      font-family: var(--font-family-base);
+      font-size: var(--font-size-main);
+      color: var(--color-grey);
+      padding-left: 5px; }
 
 .feedback__wrapper .content__style,
 .callback__wrapper .content__style {
