--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,6 +2,7 @@
 
 :root {
   --color-turquoise: #41f6d7;
+  --color-turquoise-transparent: #7ae9d651;
   --color-grey: #7e7e82;
   --color-grey-alt: #eaeaea;
   --color-black-alt: #1b1c21;
@@ -34,6 +35,7 @@
   --padding-right: 20px;
   --padding-left-mobile: 8px;
   --padding-top: 20px;
+  --padding-bottom: 32px;
   --margin-out-btn: 8px 8px;
 
   --column-gap: 20px;
