--- a/style.css
+++ b/style.css
@@ -336,7 +336,9 @@ button {
   justify-content: flex-start;
   padding-left: var(--padding-left);
   padding-top: var(--padding-top);
-  background-color: var(--color-background-btn); }
+  background-color: var(--color-background-btn);
+  position: sticky;
+  top: 0; }
   .menu-wrapper .menu--modal-menu {
     box-shadow: 0 0 50px -5px rgba(37, 37, 37, 0.815);
     height: 100%; }
