--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -443,7 +443,11 @@ main {
   font-size: var(--font-size-main);
   color: var(--color-grey);
   padding: 20px 0 20px 20px;
-  background: linear-gradient(90deg, var(--color-background-main), var(--color-background-btn));
+  background: linear-gradient(
+    90deg,
+    var(--color-background-main),
+    var(--color-background-btn)
+  );
 }
 
 .price-list {
