--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -12,6 +12,10 @@
 }
 //
 
+.transparent--none {
+  display: none !important;
+}
+
 //скрывает кнопки в хедере
 .interactiv-buttons__visible-laptop {
   @include tablet-max {
@@ -116,7 +120,8 @@
   }
 }
 
-.button--burger-close-callback, .button--burger-close-feedback {
+.button--burger-close-callback,
+.button--burger-close-feedback {
   @include mobile {
     position: static !important;
   }
@@ -161,7 +166,12 @@
       width: 5%;
       left: 95%;
       z-index: 100;
-      background: linear-gradient(90deg,rgba(248, 248, 248, 0) 0%, rgba(248, 248, 248, 0.63) 50%, rgba(248, 248, 248, 1) 100%);
+      background: linear-gradient(
+        90deg,
+        rgba(248, 248, 248, 0) 0%,
+        rgba(248, 248, 248, 0.63) 50%,
+        rgba(248, 248, 248, 1) 100%
+      );
     }
 
     &::after {
@@ -171,7 +181,12 @@
       width: 5%;
       right: 95%;
       z-index: 100;
-      background: linear-gradient(90deg,rgba(248, 248, 248, 1) 0%, rgba(248, 248, 248, 0.63) 50%, rgba(248, 248, 248, 0) 100%);
+      background: linear-gradient(
+        90deg,
+        rgba(248, 248, 248, 1) 0%,
+        rgba(248, 248, 248, 0.63) 50%,
+        rgba(248, 248, 248, 0) 100%
+      );
     }
   }
 }
@@ -184,6 +199,7 @@
   @include button--burger-close-feedback;
 }
 
-form .submit, .time__description .submit {
-  @include submit
+form .submit,
+.time__description .submit {
+  @include submit;
 }
